feat:新增状态管理

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "lint": "eslint --fix --ext .ts,.tsx,.vue,.js,.jsx --max-warnings 0"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.6",
+    "axios": "^1.7.9",
+    "js-cookie": "^3.0.5",
+    "pinia": "^2.3.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
