--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
   "dependencies": {
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.9",
+    "element-plus": "^2.9.3",
+    "element-ui": "^2.15.14",
     "js-cookie": "^3.0.5",
     "pinia": "^2.3.0",
+    "sass": "^1.83.4",
+    "sass-loader": "^16.0.4",
+    "unplugin-element-plus": "^0.9.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
@@ -30,6 +35,8 @@
     "eslint-plugin-vue": "^9.32.0",
     "prettier": "^3.4.2",
     "typescript": "~5.6.2",
+    "unplugin-auto-import": "^19.0.0",
+    "unplugin-vue-components": "^28.0.0",
     "vite": "^6.0.5",
     "vue-tsc": "^2.2.0"
   }
